--- a/proj2_from_scratch/scheduler/Gemfile
+++ b/proj2_from_scratch/scheduler/Gemfile
@@ -33,6 +33,8 @@ gem 'roo-xls'
 
 gem "iconv", "~> 1.0.3"
 
+# gem "searchlogic"
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
