--- a/proj2_from_scratch/scheduler/Gemfile
+++ b/proj2_from_scratch/scheduler/Gemfile
@@ -23,6 +23,7 @@ gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 gem 'devise'
+gem 'simple_form'
 
 gem 'roo'
 gem 'roo-xls'
@@ -51,4 +52,3 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
 end
-
